--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.2.1",
+    "firebase": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "sass": "^1.57.1"
+    "react-router-dom": "^7.5.0",
+    "sass": "^1.57.1",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.5"
   }
 }
