--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "firebase": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^7.5.0",
     "sass": "^1.57.1",
     "tailwindcss": "^4.1.3"
