--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.2.1",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
