--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "axios": "^1.7.9",
         "cors": "^2.8.5",
+        "deepl-node": "^1.17.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "nodemon": "^3.1.9",
