--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.2.1",
+    "dompurify": "^3.2.5",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
+    "marked": "^15.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
@@ -23,6 +25,7 @@
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^4.3.4",
